{
  "version": 4,
  "terraform_version": "1.2.5",
  "serial": 425,
  "lineage": "77671fd2-cb5a-673e-12dd-9d5fe90afb3c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "NATGWEIP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0854fa2b5d09212af",
            "association_id": "eipassoc-0442756209f155103",
            "domain": "vpc",
            "id": "eipalloc-0854fa2b5d09212af",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-0e7cb55b7f6ff7175",
            "private_dns": "ip-172-20-0-26.ap-south-1.compute.internal",
            "private_ip": "172.20.0.26",
            "public_dns": "ec2-3-109-253-36.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.109.253.36",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "VPCInternetGateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:010214337392:internet-gateway/igw-0d738859ee9ea229f",
            "id": "igw-0d738859ee9ea229f",
            "owner_id": "010214337392",
            "tags": {
              "name": "zoominfo-ig"
            },
            "tags_all": {
              "name": "zoominfo-ig"
            },
            "vpc_id": "vpc-07505aa18a4719834"
          },
          "dependencies": [
            "aws_vpc.ZIVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "ElasticLoadBalancingV2LoadBalancer1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:010214337392:loadbalancer/app/svc1-lb/c1e0ea964326dd69",
            "arn_suffix": "app/svc1-lb/c1e0ea964326dd69",
            "desync_mitigation_mode": "defensive",
            "dns_name": "internal-svc1-lb-23347773.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:010214337392:loadbalancer/app/svc1-lb/c1e0ea964326dd69",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "svc1-lb",
            "security_groups": [
              "sg-0a784088ca528cfb5"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-02a8622450f0729c4"
              },
              {
                "subnet_id": "subnet-043025eebcd4ac975"
              }
            ],
            "subnets": [
              "subnet-02a8622450f0729c4",
              "subnet-043025eebcd4ac975"
            ],
            "vpc_id": "vpc-07505aa18a4719834",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "dependencies": [
            "aws_security_group.Lb-SecurityGroup",
            "aws_subnet.Subnet2-Private",
            "aws_subnet.Subnet3-Private",
            "aws_vpc.ZIVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "ElasticLoadBalancingV2LoadBalancer2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:010214337392:loadbalancer/app/svc2-lb/b00e2ac6d706d0f5",
            "arn_suffix": "app/svc2-lb/b00e2ac6d706d0f5",
            "desync_mitigation_mode": "defensive",
            "dns_name": "internal-svc2-lb-2016147829.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:010214337392:loadbalancer/app/svc2-lb/b00e2ac6d706d0f5",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "svc2-lb",
            "security_groups": [
              "sg-0a784088ca528cfb5"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-02a8622450f0729c4"
              },
              {
                "subnet_id": "subnet-043025eebcd4ac975"
              }
            ],
            "subnets": [
              "subnet-02a8622450f0729c4",
              "subnet-043025eebcd4ac975"
            ],
            "vpc_id": "vpc-07505aa18a4719834",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "dependencies": [
            "aws_security_group.Lb-SecurityGroup",
            "aws_subnet.Subnet2-Private",
            "aws_subnet.Subnet3-Private",
            "aws_vpc.ZIVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "ElasticLoadBalancingV2Listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:010214337392:listener/app/svc1-lb/c1e0ea964326dd69/4d7693c4c6f75f33",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:010214337392:targetgroup/ecs-assign-service1/a9d22b7f22c48f1f",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:010214337392:listener/app/svc1-lb/c1e0ea964326dd69/4d7693c4c6f75f33",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:010214337392:loadbalancer/app/svc1-lb/c1e0ea964326dd69",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.ElasticLoadBalancingV2LoadBalancer1",
            "aws_lb_target_group.ElasticLoadBalancingV2TargetGroup",
            "aws_security_group.Lb-SecurityGroup",
            "aws_subnet.Subnet2-Private",
            "aws_subnet.Subnet3-Private",
            "aws_vpc.ZIVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "ElasticLoadBalancingV2Listener2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:010214337392:listener/app/svc2-lb/b00e2ac6d706d0f5/105f1d80872ea57d",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:010214337392:targetgroup/ecs-assign-service2/05cffe92c8da5cb9",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:010214337392:listener/app/svc2-lb/b00e2ac6d706d0f5/105f1d80872ea57d",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:010214337392:loadbalancer/app/svc2-lb/b00e2ac6d706d0f5",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.ElasticLoadBalancingV2LoadBalancer2",
            "aws_lb_target_group.ElasticLoadBalancingV2TargetGroup2",
            "aws_security_group.Lb-SecurityGroup",
            "aws_subnet.Subnet2-Private",
            "aws_subnet.Subnet3-Private",
            "aws_vpc.ZIVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "ElasticLoadBalancingV2TargetGroup",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:010214337392:targetgroup/ecs-assign-service1/a9d22b7f22c48f1f",
            "arn_suffix": "targetgroup/ecs-assign-service1/a9d22b7f22c48f1f",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "8080",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:010214337392:targetgroup/ecs-assign-service1/a9d22b7f22c48f1f",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "ecs-assign-service1",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-07505aa18a4719834"
          },
          "dependencies": [
            "aws_vpc.ZIVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "ElasticLoadBalancingV2TargetGroup2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:010214337392:targetgroup/ecs-assign-service2/05cffe92c8da5cb9",
            "arn_suffix": "targetgroup/ecs-assign-service2/05cffe92c8da5cb9",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "9090",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:010214337392:targetgroup/ecs-assign-service2/05cffe92c8da5cb9",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "ecs-assign-service2",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-07505aa18a4719834"
          },
          "dependencies": [
            "aws_vpc.ZIVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "VPCNatGateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0854fa2b5d09212af",
            "connectivity_type": "public",
            "id": "nat-0ee38d873f1a0820e",
            "network_interface_id": "eni-0e7cb55b7f6ff7175",
            "private_ip": "172.20.0.26",
            "public_ip": "3.109.253.36",
            "subnet_id": "subnet-098a9feed83c7b7d1",
            "tags": {
              "name": "nat-gw"
            },
            "tags_all": {
              "name": "nat-gw"
            }
          },
          "dependencies": [
            "aws_eip.NATGWEIP",
            "aws_subnet.Subnet1-Public",
            "aws_vpc.ZIVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "Route1-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0d40b1e9c2926a54b1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0ee38d873f1a0820e",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0d40b1e9c2926a54b",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.NATGWEIP",
            "aws_nat_gateway.VPCNatGateway",
            "aws_route_table.RouteTable-Private",
            "aws_subnet.Subnet1-Public",
            "aws_vpc.ZIVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "Route2-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0d738859ee9ea229f",
            "id": "r-rtb-0bd4f3db7972781101080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0bd4f3db797278110",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.VPCInternetGateway",
            "aws_route_table.RouteTable-Public",
            "aws_vpc.ZIVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "RouteTable-Private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:010214337392:route-table/rtb-0d40b1e9c2926a54b",
            "id": "rtb-0d40b1e9c2926a54b",
            "owner_id": "010214337392",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0ee38d873f1a0820e",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "name": "zoominfo-route-table"
            },
            "tags_all": {
              "name": "zoominfo-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-07505aa18a4719834"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.ZIVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "RouteTable-Public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:010214337392:route-table/rtb-0bd4f3db797278110",
            "id": "rtb-0bd4f3db797278110",
            "owner_id": "010214337392",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d738859ee9ea229f",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "name": "zoominfo-route-table"
            },
            "tags_all": {
              "name": "zoominfo-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-07505aa18a4719834"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.ZIVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "SubnetRouteTableAssociation-Private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03d76d2db794fe31f",
            "route_table_id": "rtb-0d40b1e9c2926a54b",
            "subnet_id": "subnet-02a8622450f0729c4"
          },
          "dependencies": [
            "aws_route_table.RouteTable-Private",
            "aws_subnet.Subnet2-Private",
            "aws_vpc.ZIVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "SubnetRouteTableAssociation-Private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c1dba79e81c185ff",
            "route_table_id": "rtb-0d40b1e9c2926a54b",
            "subnet_id": "subnet-043025eebcd4ac975"
          },
          "dependencies": [
            "aws_route_table.RouteTable-Private",
            "aws_subnet.Subnet3-Private",
            "aws_vpc.ZIVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "SubnetRouteTableAssociation-Public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0684172ef18d0e376",
            "route_table_id": "rtb-0bd4f3db797278110",
            "subnet_id": "subnet-098a9feed83c7b7d1"
          },
          "dependencies": [
            "aws_route_table.RouteTable-Public",
            "aws_subnet.Subnet1-Public",
            "aws_vpc.ZIVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "SubnetRouteTableAssociation-Public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05b0723eeb33df0bc",
            "route_table_id": "rtb-0bd4f3db797278110",
            "subnet_id": "subnet-0fc520cf2b04751f6"
          },
          "dependencies": [
            "aws_route_table.RouteTable-Public",
            "aws_subnet.Subnet4-Public",
            "aws_vpc.ZIVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Lb-SecurityGroup",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:010214337392:security-group/sg-0a784088ca528cfb5",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a784088ca528cfb5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "loadbalancer-sg",
            "name_prefix": "",
            "owner_id": "010214337392",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-07505aa18a4719834"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.ZIVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "svc1-SecurityGroup",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:010214337392:security-group/sg-09b4671b138f7e09b",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09b4671b138f7e09b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "servic1-sg",
            "name_prefix": "",
            "owner_id": "010214337392",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-07505aa18a4719834"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.ZIVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "svc2-SecurityGroup",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:010214337392:security-group/sg-0614938e5643c2dd9",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0614938e5643c2dd9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 9090,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9090
              }
            ],
            "name": "servic2-sg",
            "name_prefix": "",
            "owner_id": "010214337392",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-07505aa18a4719834"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.ZIVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Subnet1-Public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:010214337392:subnet/subnet-098a9feed83c7b7d1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "172.20.0.0/25",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-098a9feed83c7b7d1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "010214337392",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-07505aa18a4719834"
          },
          "dependencies": [
            "aws_vpc.ZIVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Subnet2-Private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:010214337392:subnet/subnet-02a8622450f0729c4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "172.20.4.128/25",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02a8622450f0729c4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "010214337392",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-07505aa18a4719834"
          },
          "dependencies": [
            "aws_vpc.ZIVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Subnet3-Private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:010214337392:subnet/subnet-043025eebcd4ac975",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "172.20.4.0/25",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-043025eebcd4ac975",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "010214337392",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-07505aa18a4719834"
          },
          "dependencies": [
            "aws_vpc.ZIVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Subnet4-Public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:010214337392:subnet/subnet-0fc520cf2b04751f6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "172.20.0.128/25",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fc520cf2b04751f6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "010214337392",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-07505aa18a4719834"
          },
          "dependencies": [
            "aws_vpc.ZIVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "ZIVPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:010214337392:vpc/vpc-07505aa18a4719834",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.20.0.0/21",
            "default_network_acl_id": "acl-028c75c8efc4b798e",
            "default_route_table_id": "rtb-0d845a01fe59817a7",
            "default_security_group_id": "sg-0404b12662299a1f2",
            "dhcp_options_id": "dopt-08c00de8220260a38",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-07505aa18a4719834",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d845a01fe59817a7",
            "owner_id": "010214337392",
            "tags": {
              "name": "zoominfoi-vpc"
            },
            "tags_all": {
              "name": "zoominfoi-vpc"
            }
          }
        }
      ]
    }
  ]
}